--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html>
     <head>
-        <title>Home page </title>
+        <title>Home page</title>
     </head>
     <body>
-        </h1>Welcome to my webpage!</h1>
+        <a href="http://127.0.0.1:5500/table.html">Go to Table Page</a>
+        <br></br>
+        <a href="https://www.w3schools.com/">Go to W3schools
+        <br></br>
+        <a href="https://github.com/LandonCart/webapp-repo">Go to Github</a>
+        <br></br>
+        <h1>Welcome to my webpage!</h1>
         <img src="images/hippos_big.jpg"
         <img src="images/chimps.jpg">
+        <p> I like thick and thin monkeys
     </body>
 </html>
