--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <br></br>
         <a href="https://github.com/LandonCart/webapp-repo">Go to Github</a>
         <br></br>
+        <a href="http://127.0.0.1:5500/lists.html">Go to Lists Page</a>
+        <br></br>
         <h1>Welcome to my webpage!</h1>
         <img src="images/hippos_big.jpg"
         <img src="images/chimps.jpg">
