change the errors
fix the branches

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <h1>Welcome to my webpage!</h1>
         <img src="images/hippos_big.jpg"
         <img src="images/chimps.jpg">
-        <p> I like thick and thin monkeys
+        <p> I like Donald Trump</p>
     </body>
 </html>
