--- a/lists.html
+++ b/lists.html
@@ -39,5 +39,17 @@
                 <dd>Big, Orange, Lazy Cat</dd>
             </dl>
         </fieldset>
+        <br><br><br>
+        <p>Hello my name is Landon Dicke. Im currently working on a web application for my DACC app dev class</p>
+        <p>This is my second paragraph</p>
+        <p>This is my third paragraph</p>
+        <span>This is my span tag. I'm learning HTML!</span>
+        <span>This is my second span tag.</span>
+        <div>This is my awesome div tag! It's reaally helpful</div>
+        <div>Div tag number 2!</div>
+
+
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/yn_6LC4loY8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
