working on a branch
updated index.html

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
         <img src="images/hippos_big.jpg"
         <img src="images/chimps.jpg">
         <p> I like Donald Trump</p>
+        <p>I added this to my branch!</p>
     </body>
 </html>
