--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
         <img src="images/chimps.jpg">
         <p> I like Donald Trump</p>
         <p>I added this to my branch!</p>
+        <p>This change is on the main branch.</p>
     </body>
 </html>
